@@ -17,6 +17,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.*;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -29,13 +30,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.web.multipart.MultipartFile;
-
-// imports cần thêm
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-
 
 import java.io.IOException;
 import java.time.LocalDateTime;
@@ -59,14 +53,10 @@ public class UserServiceImpl implements UserService {
     private final Cloudinary cloudinary;
     private final CloudinaryService cloudinaryService;
     private final NotificationService notificationService;
-
     private final EmailChangeTokenRepo emailChangeTokenRepo;
     private final MailService mailService;
-
     private final BCryptPasswordEncoder passwordEncoder;
-
     private final FriendRequestRepo friendRequestRepo;
-
     private final StringRedisTemplate redis;
     private final ObjectMapper objectMapper = new ObjectMapper();
     private final BCryptPasswordEncoder bCrypt = new BCryptPasswordEncoder();
@@ -77,15 +67,23 @@ public class UserServiceImpl implements UserService {
     @Value("${app.emailChange.otpMaxAttempts:5}")
     private int otpMaxAttempts;
 
-    @org.springframework.beans.factory.annotation.Value("${app.emailChange.confirmBaseUrl:https://your-domain.com/api/users/me/confirm-email-change}")
+    @Value("${app.emailChange.confirmBaseUrl:https://your-domain.com/api/users/me/confirm-email-change}")
     private String confirmBaseUrl;
 
-    @org.springframework.beans.factory.annotation.Value("${app.emailChange.ttlMinutes:30}")
+    @Value("${app.emailChange.ttlMinutes:30}")
     private int ttlMinutes;
+
+    @Value("${app.name:KKUN Quiz}")
+    private String appName;
+
+    @Value("${app.supportEmail:no-reply@kkun-quiz.local}")
+    private String supportEmail;
 
     private String otpKeyForUser(UUID userId) {
         return "email:change:OTP:" + userId;
     }
+
+    // ===================== OAUTH2 (giữ nguyên) =====================
     @Override
     @Transactional
     public AuthResponseDTO createOrUpdateOAuth2User(String email, String name) {
@@ -112,28 +110,26 @@ public class UserServiceImpl implements UserService {
                 .build();
     }
 
+    // ===================== GET ALL USERS (Page) =====================
     @Override
-    public List<UserResponseDTO> getAllUsers(String token) {
+    @Transactional(readOnly = true)
+    public Page<UserResponseDTO> getAllUsers(String token, Pageable pageable) {
         Map<String, Object> userInfo = jwtService.getUserInfoFromToken(token.replace("Bearer ", ""));
         boolean isAdmin = ((List<?>) userInfo.get("roles")).contains("ROLE_ADMIN");
-
-        // Nếu không phải admin, trả về lỗi 403
         if (!isAdmin) {
             throw new SecurityException("Bạn không có quyền truy cập");
         }
 
-        // Chỉ admin mới truy vấn danh sách người dùng
-        return userRepo.findAll().stream()
-                .map(user -> modelMapper.map(user, UserResponseDTO.class))
-                .collect(Collectors.toList());
+        Page<User> page = userRepo.findAll(pageable);
+        return page.map(u -> modelMapper.map(u, UserResponseDTO.class));
     }
 
+    // ===================== GET USER BY ID (giữ nguyên) =====================
     @Override
     public UserResponseDTO getUserById(String userId, String token) {
         String userIdFromToken = null;
         boolean isAdmin = false;
 
-        // Nếu có token, lấy thông tin user từ token
         if (token != null) {
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             if (authentication != null && authentication.getPrincipal() instanceof Jwt jwt) {
@@ -143,67 +139,54 @@ public class UserServiceImpl implements UserService {
             }
         }
 
-        // Lấy thông tin người dùng
         User user = userRepo.findById(UUID.fromString(userId))
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + userId));
 
-        // Map to DTO
         UserResponseDTO dto = modelMapper.map(user, UserResponseDTO.class);
 
-        // Nếu không phải owner hoặc admin, ẩn thông tin nhạy cảm (như email)
         boolean isOwner = userIdFromToken != null && userIdFromToken.equals(userId);
         if (!isAdmin && !isOwner) {
-            dto.setEmail(null); // Ẩn email
+            dto.setEmail(null);
             dto.setRoles(null);
             dto.setUsername(null);
-            // Có thể ẩn thêm fields nhạy cảm khác nếu cần
         }
-
         return dto;
     }
 
+    // ===================== RESTORE USER (giữ nguyên) =====================
     @Override
     @Transactional
     public void restoreUser(UUID id) {
-        // Lấy user cần restore
         User user = userRepo.findById(id)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + id));
 
-        // Chỉ admin mới được restore
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (!(authentication != null && authentication.getPrincipal() instanceof Jwt jwt)) {
             throw new SecurityException("Invalid Access Token");
         }
-
         @SuppressWarnings("unchecked")
         List<String> roles = jwt.getClaim("roles");
         boolean isAdmin = roles != null && roles.contains(UserRole.ADMIN.name());
         if (!isAdmin) {
             throw new SecurityException("You do not have permission to restore this user");
         }
-
-        // Nếu đã active rồi thì idempotent
-        if (user.isActive()) {
-            return;
-        }
+        if (user.isActive()) return;
 
         user.setActive(true);
         user.setUpdatedAt(LocalDateTime.now());
         userRepo.save(user);
     }
 
+    // ===================== UPDATE USER (giữ nguyên) =====================
     @Override
     @Transactional
     public UserResponseDTO updateUser(UUID id, UserRequestDTO userRequestDTO) {
         User existingUser = userRepo.findById(id)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + id));
 
-        // Validate email format
         if (userRequestDTO.getEmail() != null && !isEmailFormat(userRequestDTO.getEmail())) {
             throw new InvalidRequestException("Invalid email format");
         }
-
-        // Check for duplicate email (if changed)
         if (userRequestDTO.getEmail() != null && !userRequestDTO.getEmail().equals(existingUser.getEmail())) {
             if (userRepo.findByEmail(userRequestDTO.getEmail()).isPresent()) {
                 throw new DuplicateEntityException("Email already in use");
@@ -211,7 +194,6 @@ public class UserServiceImpl implements UserService {
             existingUser.setEmail(userRequestDTO.getEmail());
         }
 
-        // Update fields if provided
         if (userRequestDTO.getUsername() != null && !userRequestDTO.getUsername().isEmpty()) {
             existingUser.setUsername(userRequestDTO.getUsername());
         }
@@ -233,11 +215,11 @@ public class UserServiceImpl implements UserService {
             }
         }
 
-        // Save updated user
         User updatedUser = userRepo.save(existingUser);
         return modelMapper.map(updatedUser, UserResponseDTO.class);
     }
 
+    // ===================== DELETE USER (giữ nguyên) =====================
     @Override
     public void deleteUser(UUID id) {
         if (!userRepo.existsById(id)) {
@@ -246,14 +228,13 @@ public class UserServiceImpl implements UserService {
         userRepo.deleteById(id);
     }
 
+    // ===================== SOFT DELETE (giữ nguyên) =====================
     @Override
     @Transactional
     public void deleteSoftUser(UUID id, String password) {
-        // Lấy user cần xóa
         User user = userRepo.findById(id)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + id));
 
-        // Kiểm tra quyền: admin hoặc chính chủ
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (!(authentication != null && authentication.getPrincipal() instanceof Jwt jwt)) {
             throw new SecurityException("Invalid Access Token");
@@ -268,7 +249,6 @@ public class UserServiceImpl implements UserService {
             throw new SecurityException("You do not have permission to delete this user");
         }
 
-        // ✅ Kiểm tra mật khẩu (bắt buộc nếu không phải admin)
         if (!isAdmin) {
             if (password == null || password.isBlank()) {
                 throw new IllegalArgumentException("Password is required to delete account");
@@ -278,18 +258,14 @@ public class UserServiceImpl implements UserService {
             }
         }
 
-        // Đã soft-delete trước đó thì thôi (idempotent)
-        if (!user.isActive()) {
-            return;
-        }
+        if (!user.isActive()) return;
 
-        // Thực hiện soft delete
         user.setActive(false);
         user.setUpdatedAt(LocalDateTime.now());
         userRepo.save(user);
     }
 
-
+    // ===================== UPDATE AVATAR (giữ nguyên) =====================
     @Override
     @Transactional
     public UserResponseDTO updateUserAvatar(UUID id, MultipartFile file, String token) {
@@ -312,11 +288,10 @@ public class UserServiceImpl implements UserService {
                 throw new IllegalArgumentException("Avatar file cannot be empty");
             }
 
-            // public_id cố định để luôn overwrite
             String publicId = "user_avatars/" + id;
             Map uploadResult = cloudinaryService.upload(file, publicId);
 
-            String avatarUrl = (String) uploadResult.get("secure_url"); // sẽ có /v1234567890/ trong URL
+            String avatarUrl = (String) uploadResult.get("secure_url");
             user.setAvatar(avatarUrl);
             user.setUpdatedAt(LocalDateTime.now());
 
@@ -327,7 +302,7 @@ public class UserServiceImpl implements UserService {
         }
     }
 
-    // ==================== NEW: changePassword ====================
+    // ===================== CHANGE PASSWORD (giữ nguyên) =====================
     @Override
     @Transactional
     public void changePassword(UUID userId, String currentPassword, String newPassword) {
@@ -335,8 +310,6 @@ public class UserServiceImpl implements UserService {
                 || newPassword == null || newPassword.isBlank()) {
             throw new InvalidRequestException("Password must not be blank");
         }
-
-        // (tuỳ chọn) chính sách độ mạnh
         if (newPassword.length() < 8) {
             throw new InvalidRequestException("New password must be at least 8 characters");
         }
@@ -344,41 +317,35 @@ public class UserServiceImpl implements UserService {
         User user = userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + userId));
 
-        // Kiểm tra mật khẩu hiện tại đúng không
         if (!encoder.matches(currentPassword, user.getPassword())) {
             throw new InvalidRequestException("Current password is incorrect");
         }
 
-        // Đặt mật khẩu mới (setter đã tự encode)
         user.setPassword(newPassword);
         user.setUpdatedAt(LocalDateTime.now());
         userRepo.save(user);
-
-        // (tuỳ chọn) Invalidate refresh tokens nếu bạn có cơ chế lưu token
-        // jwtService.revokeTokensForUser(userId); // ví dụ
     }
 
+    // ===================== CURRENT USER ID (giữ nguyên) =====================
     @Override
     public String getCurrentUserId() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (authentication != null && authentication.getPrincipal() instanceof UserPrincipal) {
             UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
-            return userPrincipal.getUserId().toString(); // Assuming getUserId() returns UUID or String
+            return userPrincipal.getUserId().toString();
         }
-
-        // Fallback to request attribute set by JwtInterceptor
         HttpServletRequest request = ((ServletRequestAttributes) RequestContextHolder.currentRequestAttributes()).getRequest();
         String userId = (String) request.getAttribute("currentUserId");
         if (userId != null) {
             return userId;
         }
-
         throw new IllegalStateException("Cannot get userId from Access Token or request");
     }
 
+    // ===================== FRIEND SUGGESTIONS (Page) =====================
     @Override
     @Transactional(readOnly = true)
-    public List<FriendSuggestionDTO> getFriendSuggestions(UUID currentUserId, int page, int size) {
+    public Page<FriendSuggestionDTO> getFriendSuggestions(UUID currentUserId, Pageable pageable) {
         User me = userRepo.findById(currentUserId)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + currentUserId));
 
@@ -391,28 +358,22 @@ public class UserServiceImpl implements UserService {
         Set<UUID> excluded = new HashSet<>(myFriendIds);
         excluded.add(currentUserId);
 
-        // ===== Loại các user đang có PENDING (incoming + outgoing) =====
-        // Outgoing: mình đã gửi yêu cầu cho họ
+        // Loại các request PENDING (cả incoming/outgoing)
         friendRequestRepo.findAllByRequesterAndStatus(me, FriendRequest.Status.PENDING)
                 .forEach(fr -> excluded.add(fr.getReceiver().getUserId()));
-
-        // Incoming: họ đã gửi yêu cầu cho mình
         friendRequestRepo.findAllByReceiverAndStatus(me, FriendRequest.Status.PENDING)
                 .forEach(fr -> excluded.add(fr.getRequester().getUserId()));
-        // ===============================================================
 
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
-
-        // Giữ nguyên query custom của bạn (đã nhận excluded + cờ skip nếu rỗng)
+        // Query có phân trang
         Page<User> candidates = userRepo.findSuggestions(
                 currentUserId,
                 excluded,
-                excluded.isEmpty(),   // nếu true -> bỏ điều kiện NOT IN
+                excluded.isEmpty(),
                 pageable
         );
 
-        // Tính mutual friends rồi sort theo mutual desc (giữ nguyên logic cũ)
-        return candidates.getContent().stream()
+        // Map sang DTO + giữ nguyên sort mutual desc trong page content
+        List<FriendSuggestionDTO> content = candidates.getContent().stream()
                 .map(u -> {
                     int mutual = (int) u.getFriends().stream()
                             .map(User::getUserId)
@@ -428,10 +389,13 @@ public class UserServiceImpl implements UserService {
                     );
                 })
                 .sorted((a, b) -> Integer.compare(b.getMutualFriends(), a.getMutualFriends()))
-                .collect(Collectors.toList());
+                .toList();
+
+        // Trả Page giữ nguyên pageable+total từ query gốc
+        return new PageImpl<>(content, pageable, candidates.getTotalElements());
     }
 
-
+    // ===================== ADD/REQUEST/ACCEPT/DECLINE/CANCEL (giữ nguyên) =====================
     @Override
     @Transactional
     public void addFriend(UUID requesterId, UUID targetUserId) {
@@ -439,7 +403,6 @@ public class UserServiceImpl implements UserService {
             throw new InvalidRequestException("You cannot add yourself as a friend");
         }
 
-        // Kiểm tra quyền: requesterId phải trùng userId trong token hoặc admin
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (!(authentication != null && authentication.getPrincipal() instanceof Jwt jwt)) {
             throw new SecurityException("Invalid Access Token");
@@ -463,17 +426,13 @@ public class UserServiceImpl implements UserService {
             throw new InvalidRequestException("Inactive accounts cannot make friend connections");
         }
 
-        // Nếu đã là bạn rồi -> idempotent
         if (me.getFriends().stream().anyMatch(f -> f.getUserId().equals(targetUserId))) {
             return;
         }
 
-        // Thêm bạn 2 chiều (hàm addFriend của entity đã đảm bảo 2 chiều)
         me.addFriend(target);
 
-        // Lưu chủ sở hữu quan hệ (User là owning side của @ManyToMany vì không có mappedBy)
         userRepo.save(me);
-        // (không bắt buộc) lưu target để chắc chắn đồng bộ (thường không cần)
         userRepo.save(target);
     }
 
@@ -497,10 +456,9 @@ public class UserServiceImpl implements UserService {
                 .orElseThrow(() -> new UserNotFoundException("User not found: " + me));
 
         if (newEmail.equalsIgnoreCase(current.getEmail())) {
-            return; // idempotent: trùng email hiện tại -> bỏ qua
+            return;
         }
 
-        // Chỉ giữ 1 token cho 1 user
         emailChangeTokenRepo.deleteByUserId(me);
 
         String token = java.util.UUID.randomUUID().toString();
@@ -513,7 +471,6 @@ public class UserServiceImpl implements UserService {
                 .build();
         emailChangeTokenRepo.save(ect);
 
-        // FE-first confirm
         String verifyLink = confirmBaseUrl + "?token=" + token;
         String subject = "Xác nhận đổi địa chỉ email";
         String html = """
@@ -522,7 +479,7 @@ public class UserServiceImpl implements UserService {
         <p><a href="%s" style="display:inline-block;padding:10px 16px;border-radius:6px;background:#4f46e5;color:#fff;text-decoration:none;">Xác nhận đổi email</a></p>
         <p>Nếu nút không hoạt động, hãy copy link: <br/>%s</p>
         <p>Liên kết sẽ hết hạn sau %d phút. Nếu bạn không yêu cầu, hãy bỏ qua email này.</p>
-    """.formatted(verifyLink, verifyLink, ttlMinutes);
+        """.formatted(verifyLink, verifyLink, ttlMinutes);
 
         mailService.sendEmail(newEmail, subject, html);
     }
@@ -557,19 +514,11 @@ public class UserServiceImpl implements UserService {
         emailChangeTokenRepo.deleteByUserId(user.getUserId());
     }
 
-
-    @Value("${app.name:KKUN Quiz}")
-    private String appName;
-
-    @Value("${app.supportEmail:no-reply@kkun-quiz.local}")
-    private String supportEmail;
-
     @Override
     @Transactional
     public void requestEmailChangeOtp(String newEmail) {
         UUID me = UUID.fromString(getCurrentUserId());
 
-        // Validate cơ bản
         if (newEmail == null || newEmail.isBlank()) {
             throw new InvalidRequestException("Email must not be blank");
         }
@@ -583,14 +532,12 @@ public class UserServiceImpl implements UserService {
         User current = userRepo.findById(me)
                 .orElseThrow(() -> new UserNotFoundException("User not found: " + me));
         if (newEmail.equalsIgnoreCase(current.getEmail())) {
-            return; // idempotent
+            return;
         }
 
-        // Tạo mã 6 số
         String code = String.format("%06d", new java.util.Random().nextInt(1_000_000));
         String codeHash = bCrypt.encode(code);
 
-        // Lưu Redis (ghi đè bên cũ)
         EmailChangeOtpPayload payload = EmailChangeOtpPayload.builder()
                 .newEmail(newEmail.trim())
                 .codeHash(codeHash)
@@ -603,7 +550,6 @@ public class UserServiceImpl implements UserService {
             throw new RuntimeException("Cannot store OTP payload: " + e.getMessage(), e);
         }
 
-        // ===== GỬI EMAIL OTP (HTML đẹp, tương thích email client) =====
         String subject = "Mã xác minh đổi email — " + appName;
 
         String html = """
@@ -672,11 +618,11 @@ public class UserServiceImpl implements UserService {
     </body>
     </html>
     """.formatted(
-                appName,                           // %1$s
-                otpTTLMinutes,                     // %2$d
-                code,                              // %3$s
-                supportEmail,                      // %4$s
-                Year.now().getValue()              // %5$d
+                appName,
+                otpTTLMinutes,
+                code,
+                supportEmail,
+                Year.now().getValue()
         );
 
         mailService.sendEmail(newEmail, subject, html);
@@ -708,13 +654,11 @@ public class UserServiceImpl implements UserService {
             if (!ok) {
                 payload.setAttempts(payload.getAttempts() + 1);
                 redis.opsForValue().set(key, objectMapper.writeValueAsString(payload),
-                        redis.getExpire(key), TimeUnit.SECONDS); // giữ nguyên TTL còn lại
+                        redis.getExpire(key), TimeUnit.SECONDS);
                 throw new InvalidRequestException("Invalid code");
             }
 
-            // Code hợp lệ -> cập nhật email
             userRepo.findByEmail(payload.getNewEmail()).ifPresent(u -> {
-                // race condition: email vừa bị ai đó chiếm
                 redis.delete(key);
                 throw new DuplicateEntityException("Email already in use");
             });
@@ -726,7 +670,6 @@ public class UserServiceImpl implements UserService {
             user.setUpdatedAt(LocalDateTime.now());
             userRepo.save(user);
 
-            // Cleanup
             redis.delete(key);
 
         } catch (InvalidRequestException | DuplicateEntityException e) {
@@ -763,10 +706,8 @@ public class UserServiceImpl implements UserService {
             throw new InvalidRequestException("Inactive accounts cannot make friend connections");
         }
 
-        // Đã là bạn rồi → idempotent
         if (requester.getFriends().stream().anyMatch(f -> f.getUserId().equals(targetUserId))) return;
 
-        // Nếu có PENDING ngược chiều => auto-accept
         Optional<FriendRequest> reversePending = friendRequestRepo
                 .findByRequesterAndReceiverAndStatus(target, requester, FriendRequest.Status.PENDING);
         if (reversePending.isPresent()) {
@@ -781,7 +722,6 @@ public class UserServiceImpl implements UserService {
             return;
         }
 
-        // Tồn tại bản ghi giữa 2 bên? -> chỉ UPDATE về PENDING
         FriendRequest fr = friendRequestRepo.findByRequesterAndReceiver(requester, target)
                 .orElseGet(() -> FriendRequest.builder()
                         .requester(requester)
@@ -790,27 +730,24 @@ public class UserServiceImpl implements UserService {
                         .createdAt(LocalDateTime.now())
                         .build());
 
-        // Nếu đã PENDING rồi -> idempotent
         if (fr.getId() != null && fr.getStatus() == FriendRequest.Status.PENDING) return;
 
         fr.setStatus(FriendRequest.Status.PENDING);
         fr.setUpdatedAt(LocalDateTime.now());
         friendRequestRepo.save(fr);
         notificationService.createNotification(
-                target.getUserId(),                // người nhận noti
-                requester.getUserId(),             // tác nhân
-                "FRIEND_REQUEST_SENT",             // verb
-                "FRIEND_REQUEST",                  // targetType
-                fr.getId(),                        // targetId
+                target.getUserId(),
+                requester.getUserId(),
+                "FRIEND_REQUEST_SENT",
+                "FRIEND_REQUEST",
+                fr.getId(),
                 requester.getName() + " sent you a friend request"
         );
     }
 
-
     @Override
     @Transactional
     public void acceptFriendRequest(UUID receiverId, UUID requestId) {
-        // quyền: receiverId == user trong JWT hoặc admin
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         if (!(auth != null && auth.getPrincipal() instanceof Jwt jwt)) {
             throw new SecurityException("Invalid Access Token");
@@ -829,7 +766,7 @@ public class UserServiceImpl implements UserService {
             throw new SecurityException("This request does not belong to you");
         }
         if (fr.getStatus() != FriendRequest.Status.PENDING) {
-            return; // idempotent
+            return;
         }
 
         fr.setStatus(FriendRequest.Status.ACCEPTED);
@@ -839,16 +776,14 @@ public class UserServiceImpl implements UserService {
         User requester = fr.getRequester();
         User receiver  = fr.getReceiver();
 
-        // Nếu đã là bạn rồi thì bỏ qua (idempotent)
         boolean alreadyFriends = requester.getFriends().stream()
                 .anyMatch(u -> u.getUserId().equals(receiver.getUserId()));
         if (!alreadyFriends) {
-            requester.addFriend(receiver);   // ➜ add 2 chiều (method entity của bạn làm 2 chiều)
+            requester.addFriend(receiver);
             userRepo.save(requester);
             userRepo.save(receiver);
         }
 
-        // Dọn các request giữa 2 bên còn PENDING (cùng chiều / ngược chiều) -> set ACCEPTED
         friendRequestRepo.findByRequesterAndReceiver(requester, receiver)
                 .filter(r -> r.getStatus() == FriendRequest.Status.PENDING)
                 .ifPresent(r -> {
@@ -865,22 +800,19 @@ public class UserServiceImpl implements UserService {
                     friendRequestRepo.save(r);
                 });
 
-        // ===== Notifications (per-user) =====
-        // 1) Báo cho người gửi: lời mời đã được chấp nhận
         notificationService.createNotification(
-                requester.getUserId(),                 // người nhận noti (người đã gửi)
-                receiver.getUserId(),                  // tác nhân (người chấp nhận)
-                "FRIEND_REQUEST_ACCEPTED",             // verb
-                "FRIEND_REQUEST",                      // targetType
-                fr.getId(),                            // targetId
+                requester.getUserId(),
+                receiver.getUserId(),
+                "FRIEND_REQUEST_ACCEPTED",
+                "FRIEND_REQUEST",
+                fr.getId(),
                 (receiver.getName() != null ? receiver.getName() : receiver.getUsername())
                         + " đã chấp nhận lời mời kết bạn của bạn"
         );
 
-        // 2) (khuyến nghị) Báo “đã trở thành bạn bè” cho CẢ 2 phía để FE cập nhật danh sách bạn
         notificationService.createNotification(
-                receiver.getUserId(),                  // người nhận
-                requester.getUserId(),                 // tác nhân
+                receiver.getUserId(),
+                requester.getUserId(),
                 "FRIEND_ADDED",
                 "FRIEND",
                 requester.getUserId(),
@@ -889,8 +821,8 @@ public class UserServiceImpl implements UserService {
         );
 
         notificationService.createNotification(
-                requester.getUserId(),                 // người nhận
-                receiver.getUserId(),                  // tác nhân
+                requester.getUserId(),
+                receiver.getUserId(),
                 "FRIEND_ADDED",
                 "FRIEND",
                 receiver.getUserId(),
@@ -898,7 +830,6 @@ public class UserServiceImpl implements UserService {
                         + " đã trở thành bạn bè"
         );
     }
-
 
     @Override
     @Transactional
@@ -908,13 +839,13 @@ public class UserServiceImpl implements UserService {
         if (!fr.getReceiver().getUserId().equals(receiverId)) {
             throw new SecurityException("This request does not belong to you");
         }
-        if (fr.getStatus() != FriendRequest.Status.PENDING) return; // idempotent
+        if (fr.getStatus() != FriendRequest.Status.PENDING) return;
         fr.setStatus(FriendRequest.Status.DECLINED);
         fr.setUpdatedAt(LocalDateTime.now());
         friendRequestRepo.save(fr);
         notificationService.createNotification(
-                fr.getRequester().getUserId(), // người nhận noti (người đã gửi)
-                fr.getReceiver().getUserId(),  // tác nhân (người từ chối)
+                fr.getRequester().getUserId(),
+                fr.getReceiver().getUserId(),
                 "FRIEND_REQUEST_DECLINED",
                 "FRIEND_REQUEST",
                 fr.getId(),
@@ -932,13 +863,12 @@ public class UserServiceImpl implements UserService {
         }
         if (fr.getStatus() != FriendRequest.Status.PENDING) return;
 
-        // Chỉ đổi trạng thái (không xóa) → để lần sau gửi lại chỉ cần UPDATE về PENDING
         fr.setStatus(FriendRequest.Status.CANCELED);
         fr.setUpdatedAt(LocalDateTime.now());
         friendRequestRepo.save(fr);
         notificationService.createNotification(
-                fr.getReceiver().getUserId(),  // người nhận noti (người bị mời trước đó)
-                fr.getRequester().getUserId(), // tác nhân (người hủy)
+                fr.getReceiver().getUserId(),
+                fr.getRequester().getUserId(),
                 "FRIEND_REQUEST_CANCELED",
                 "FRIEND_REQUEST",
                 fr.getId(),
@@ -946,44 +876,32 @@ public class UserServiceImpl implements UserService {
         );
     }
 
-
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<FriendRequestDTO> getIncomingRequestsPaged(UUID userId, int page, int size) {
+    public Page<FriendRequestDTO> getIncomingRequestsPaged(UUID userId, Pageable pageable) {
         User me = userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User not found: " + userId));
 
-        Pageable pageable = PageRequest.of(Math.max(0, page), Math.min(Math.max(1, size), 50),
-                Sort.by(Sort.Direction.DESC, "createdAt"));
-
-        Page<FriendRequestDTO> dtoPage = friendRequestRepo
+        return friendRequestRepo
                 .findAllByReceiverAndStatus(me, FriendRequest.Status.PENDING, pageable)
                 .map(this::toDto);
-
-        return toPageResponse(dtoPage);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<FriendRequestDTO> getOutgoingRequestsPaged(UUID userId, int page, int size) {
+    public Page<FriendRequestDTO> getOutgoingRequestsPaged(UUID userId, Pageable pageable) {
         User me = userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User not found: " + userId));
 
-        Pageable pageable = PageRequest.of(Math.max(0, page), Math.min(Math.max(1, size), 50),
-                Sort.by(Sort.Direction.DESC, "createdAt"));
-
-        Page<FriendRequestDTO> dtoPage = friendRequestRepo
+        return friendRequestRepo
                 .findAllByRequesterAndStatus(me, FriendRequest.Status.PENDING, pageable)
                 .map(this::toDto);
-
-        return toPageResponse(dtoPage);
     }
 
     @Override
     @Transactional(readOnly = true)
     public FriendshipStatusResponseDTO getFriendshipStatus(UUID me, UUID targetId) {
         if (me.equals(targetId)) {
-            // chính mình -> coi như không cần nút friend
             return FriendshipStatusResponseDTO.builder()
                     .status(FriendshipStatus.NONE)
                     .requestId(null)
@@ -995,7 +913,6 @@ public class UserServiceImpl implements UserService {
         User target = userRepo.findById(targetId)
                 .orElseThrow(() -> new UserNotFoundException("User not found: " + targetId));
 
-        // 1) Đã là bạn?
         if (meUser.isFriendsWith(targetId)) {
             return FriendshipStatusResponseDTO.builder()
                     .status(FriendshipStatus.FRIEND)
@@ -1003,7 +920,6 @@ public class UserServiceImpl implements UserService {
                     .build();
         }
 
-        // 2) Có pending ngược chiều (họ mời mình)?
         Optional<FriendRequest> incoming = friendRequestRepo
                 .findByRequesterAndReceiverAndStatus(target, meUser, FriendRequest.Status.PENDING);
         if (incoming.isPresent()) {
@@ -1013,7 +929,6 @@ public class UserServiceImpl implements UserService {
                     .build();
         }
 
-        // 3) Có pending cùng chiều (mình đã mời họ)?
         Optional<FriendRequest> outgoing = friendRequestRepo
                 .findByRequesterAndReceiverAndStatus(meUser, target, FriendRequest.Status.PENDING);
         if (outgoing.isPresent()) {
@@ -1023,52 +938,36 @@ public class UserServiceImpl implements UserService {
                     .build();
         }
 
-        // 4) Không có gì
         return FriendshipStatusResponseDTO.builder()
                 .status(FriendshipStatus.NONE)
                 .requestId(null)
                 .build();
     }
 
+    // ===================== FRIENDS OF (Page) =====================
     @Override
     @Transactional(readOnly = true)
-    public List<UserResponseDTO> getFriendsOf(UUID userId) {
-        User u = userRepo.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found: " + userId));
-
-        return u.getFriends().stream()
-                .map(friend -> modelMapper.map(friend, UserResponseDTO.class))
-                .collect(Collectors.toList());
+    public Page<UserResponseDTO> getFriendsOf(UUID userId, Pageable pageable) {
+        // Lấy page<User> bạn bè
+        Page<User> friendsPage = userRepo.findFriendsOf(userId, pageable);
+        // Map sang DTO
+        return friendsPage.map(friend -> modelMapper.map(friend, UserResponseDTO.class));
     }
 
-
+    // ===================== Helpers (giữ nguyên) =====================
     private FriendRequestDTO toDto(FriendRequest fr) {
         return FriendRequestDTO.builder()
                 .id(fr.getId())
                 .status(fr.getStatus().name())
                 .createdAt(fr.getCreatedAt())
-
                 .requesterId(fr.getRequester().getUserId())
                 .requesterName(fr.getRequester().getName())
                 .requesterUsername(fr.getRequester().getUsername())
                 .requesterAvatar(fr.getRequester().getAvatar())
-
                 .receiverId(fr.getReceiver().getUserId())
                 .receiverName(fr.getReceiver().getName())
                 .receiverUsername(fr.getReceiver().getUsername())
                 .receiverAvatar(fr.getReceiver().getAvatar())
-                .build();
-    }
-
-    private <T> PageResponse<T> toPageResponse(Page<T> page) {
-        return PageResponse.<T>builder()
-                .content(page.getContent())
-                .page(page.getNumber())
-                .size(page.getSize())
-                .totalElements(page.getTotalElements())
-                .totalPages(page.getTotalPages())
-                .hasNext(page.hasNext())
-                .hasPrev(page.hasPrevious())
                 .build();
     }
 
